# langgraph-helper-agent

./: .dockerignore  .env.example  .gitignore  .python-version  DOCKER.md  Dockerfile  EVALUATION.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  data-refresh.yml  evaluation.yml
data/: langchain_llms.txt  metadata.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  DOCKER.md  EVALUATION.md  RAGAS_EVALUATION.md
evaluation/: __init__.py  dataset.json  evaluate.py  metrics.py
evaluation/reports/: .gitkeep
example_outputs/: offline_outputs.txt  offline_outputs_old.txt  offline_outputs_old2.txt  online_outputs.txt  online_outputs_old.txt  online_outputs_old2.txt
scripts/: build_vectorstore.py  check_google_models.py  refresh_data.py  run_example_questions.py
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
tests/: __init__.py
tests/unit/: __init__.py  test_config.py  test_metrics.py  test_state.py
