[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-helper-agent"
version = "0.1.0"
description = "An AI agent that helps developers work with LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alex Pavlides", email = "alex.pavlides@hotmail.com" }
]
keywords = ["langgraph", "langchain", "ai", "agent", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
eval = [
    "ragas>=0.1.0",
    "datasets>=2.18.0",
    "langchain-google-genai>=0.1.0",
]
online = [
    "langchain-tavily>=0.1.0",
    "tavily-python>=0.3.0",
]
all = [
    "langgraph-helper-agent[dev,eval,online]",
]

[project.scripts]
langgraph-helper = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/langgraph-helper-agent"
Documentation = "https://github.com/yourusername/langgraph-helper-agent#readme"
Repository = "https://github.com/yourusername/langgraph-helper-agent"
Issues = "https://github.com/yourusername/langgraph-helper-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
